--- a/beacon-distro/manifest.yaml
+++ b/beacon-distro/manifest.yaml
@@ -1,15 +1,15 @@
 dist:
   name: otelcol-beacon
+  module: github.com/complytime/complybeacon/beacon
   description: complybeacon collector distro
   output_path: ./beacon
 
 exporters:
-  - gomod:
-      go.opentelemetry.io/collector/exporter/debugexporter v0.131.0
-  - gomod:
-      go.opentelemetry.io/collector/exporter/otlpexporter v0.131.0
-  - gomod:
-      go.opentelemetry.io/collector/exporter/otlphttpexporter v0.131.0
+  - gomod: go.opentelemetry.io/collector/exporter/debugexporter v0.131.0
+  - gomod: go.opentelemetry.io/collector/exporter/otlpexporter v0.131.0
+  - gomod: go.opentelemetry.io/collector/exporter/otlphttpexporter v0.131.0
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/exporter/awss3exporter v0.134.0
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/exporter/fileexporter v0.134.0
 
 processors:
   - gomod: go.opentelemetry.io/collector/processor/batchprocessor v0.131.0
