--- a/docs/demo/demo-config.yaml
+++ b/docs/demo/demo-config.yaml
@@ -1,7 +1,11 @@
-# To limit exposure to denial-of-service attacks, change the host in endpoints below from 0.0.0.0 to a specific network interface.
-# See https://github.com/open-telemetry/opentelemetry-collector/blob/main/docs/security-best-practices.md#safeguards-against-denial-of-service-attacks
-
 receivers:
+  webhookevent:
+    endpoint: 0.0.0.0:8088
+    read_timeout: "500ms"
+    path: "/eventsource/receiver"
+    health_path: "/eventreceiver/healthcheck"
+    split_logs_at_newline: false
+
   otlp:
     protocols:
       grpc:
@@ -12,7 +16,9 @@ receivers:
 processors:
   batch:
   truthbeam:
-    endpoint: "https://0.0.0.0:8081"
+    endpoint: "http://compass:8081"
+    tls:
+      insecure: true
   # For logs that are received from or something similar filelog instead of OTLP.
   # These are expected to be in OCSF format before entering the pipeline.
   transform/ocsf:
@@ -37,6 +43,14 @@ processors:
 exporters:
   debug:
     verbosity: detailed
+  otlphttp/logs:
+    endpoint: "http://loki:3100/otlp"
+    tls:
+      insecure: true
+  awss3/logs:
+    s3uploader:
+      region: 'us-east-1'
+      s3_bucket: 'otel-data-backup'
 
 service:
   pipelines:
@@ -48,7 +62,7 @@ service:
       receivers: [ otlp ]
       processors: [ batch ]
       exporters: [ debug ]
-    logs:
-      receivers: [ otlp ]
-      processors: [ transform/ocsf, truthbeam ]
-      exporters: [ debug ]
+    logs/analysis_pipeline:
+      receivers: [ webhookevent, otlp ]
+      processors: [ batch, transform/ocsf, truthbeam ]
+      exporters: [ debug, otlphttp/logs ]
