--- a/hack/sampledata/evaluations/OSPS-B.yml
+++ b/hack/sampledata/evaluations/OSPS-B.yml
@@ -5,4 +5,4 @@
         - id: "github_branch_protection"
           name: "github_branch_protection"
           description: "Checking branch protections in GitHub"
-
+          documentation: https://docs.github.com/en/repositories/configuring-branches-and-merges-in-your-repository/managing-protected-branches/managing-a-branch-protection-rule
